Fix frame positioning for shorter screen. Fix tag widget wrapping on firefox

--- a/src/MediaFrame.css
+++ b/src/MediaFrame.css
@@ -3,7 +3,7 @@ div.toolbar div.mediaFrame {
   width:900px;
   height:800px;
   left: 152px;
-  top: 10px;
+  top: -300px;
   background:white;
   border-style:solid;
   padding:5px;
