--- a/src/PageFrame.css
+++ b/src/PageFrame.css
@@ -3,7 +3,7 @@ div.toolbar div.pageFrame {
   width:800px;
   height:500px;
   left: 152px;
-  top: 10px;
+  top: 0px;
   background:white;
   border-style:solid;
   padding:5px;
